--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,4 @@ board = megaatmega2560
 framework = arduino
 board_build.f_cpu = 16000000L
 monitor_speed = 9600
+src-filter = src/main.c, src/usart.c
